# shitpost-bot-rs

./: .dockerignore  .gitignore  .rustfmt.toml  Cargo.toml  Dockerfile  docker-compose.yaml  docker-entrypoint.sh
scripts/: deploy.sh
src/: emojis.rs  main.rs  reply.rs  roles.rs  users.rs
