[package]
authors = ["Zack Smith <zack.t.smith37@gmail.com>"]
edition = "2018"
name = "shitpost-bot-rs"
version = "0.1.0"

[profile.release]
lto="thin"

[dependencies]
rand = "0.7"
serde_json = "1.0"
regex = "1.3.9"
lazy_static = "1.4.0"
url = "2.1.1"
serde = "1.0.114"
log = "0.4.8"
env_logger = "0.7.1"
dotenv = "0.15.0"

[dependencies.serenity]
git = "https://github.com/Lakelezz/serenity/"
branch = "await"

[dependencies.reqwest]
version = "0.10"
features = ["json"]

[dependencies.tokio]
version = "0.2"
features = ["full"]
