[package]
authors = ["Zack Smith <zack.t.smith37@gmail.com>"]
edition = "2018"
name = "shitpost-bot-rs"
version = "1.3.1"

[profile.release]
lto = true
panic = "abort"
opt-level = "z"

[dependencies]
rand = "0.8.0"
serde_json = "1.0.60"
lazy_static = "1.4.0"
url = "2.2.0"
serde = "1.0.118"
log = "0.4.11"
env_logger = "0.8.2"
dotenv = "0.15.0"
serenity = "0.10.1"
futures = "0.3.8"
regex = "1.4.3"

[dependencies.reqwest]
version = "0.11"
features = ["json"]

[dependencies.tokio]
version = "1.0"
features = ["macros", "rt-multi-thread"]
